--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,24 @@ main {
     line-height: 1.7; /* tipografia mais legível */
     color: #444;
 }
+
+#habilidades {
+    margin-top: 40px;
+}
+
+.skills {
+    display: flex;
+    gap: 20px;
+}
+
+.card {
+    padding: 20px 30px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+.card:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+}
