--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ header {
     align-items: center; /* alinha verticalmente */
     padding: 20px 40px;
     background-color: #f5f5f5;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
 }
 
 header h1 {
@@ -71,6 +74,7 @@ main {
 .skills {
     display: flex;
     gap: 20px;
+    flex-direction: column;
 }
 
 .card {
@@ -83,4 +87,16 @@ main {
 .card:hover {
     background-color: #e0e0e0;
     cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    
+    header {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .skills {
+        flex-direction: row;
+    }
 }
